# desktop-app

./: Cargo.toml  Dioxus.toml  README.md  index.html  input.css
public/: tailwind.css
src/: main.rs
src/components/: navbar.rs
src/screens/: email_verification.rs  home.rs  loading.rs  mod.rs  register.rs
src/utils/: app_error.rs  custom_request.rs  mod.rs  register.rs  ws.rs.old
