[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-router = "0.4.1"
fastwebsockets = "0.4.4"
hyper = "0.14.27"
log = "0.4.20"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
simple_logger = "4.2.0"
tokio = { version = "1.32.0", features = ["full"] }
